@@ -115,6 +115,9 @@ Extension Modules
 
 - Bug #1721309: prevent bsddb module from freeing random memory.
 
+- Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
+  intended for RECNO databases.
+
 - Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
   WIN32_FIND_DATAW structures in the ctypes.wintypes module.
 
